# falliant

./: .gitignore  MANIFEST.in  README.md  README.pypi.md  pyproject.toml
.github/workflows/: bump-version.yml  python-publish.yml
falliant/: __init__.py  __main__.py  block.py  constants.py  game.py  renderer.py  ui.py
